// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shared HOCs Mappers - Segments if there are 6 segments, the last segment should display a tooltip with the information of the sixth segment 1`] = `
Object {
  "header": Array [
    Object {
      "label": "Segment",
      "weight": "semibold",
    },
    Object {
      "label": "",
    },
    Object {
      "align": "right",
      "label": "%",
      "weight": "semibold",
    },
  ],
  "rows": Array [
    Object {
      "columns": Array [
        Object {
          "label": "Segment 4",
          "truncated": true,
          "weight": "semibold",
          "width": 160,
        },
        Object {
          "align": "right",
          "label": "150",
        },
        Object {
          "align": "right",
          "label": "4.2%",
          "weight": "semibold",
          "width": 50,
        },
      ],
    },
  ],
}
`;

exports[`Shared HOCs Mappers - Segments if there are 7 segments, the last segment should display 2 rows in tooltip 1`] = `
Object {
  "header": Array [
    Object {
      "label": "Segment",
      "weight": "semibold",
    },
    Object {
      "label": "",
    },
    Object {
      "align": "right",
      "label": "%",
      "weight": "semibold",
    },
  ],
  "rows": Array [
    Object {
      "columns": Array [
        Object {
          "label": "Segment 5",
          "truncated": true,
          "weight": "semibold",
          "width": 160,
        },
        Object {
          "align": "right",
          "label": "450",
        },
        Object {
          "align": "right",
          "label": "12.5%",
          "weight": "semibold",
          "width": 50,
        },
      ],
    },
    Object {
      "columns": Array [
        Object {
          "label": "Segment 4",
          "truncated": true,
          "weight": "semibold",
          "width": 160,
        },
        Object {
          "align": "right",
          "label": "150",
        },
        Object {
          "align": "right",
          "label": "4.2%",
          "weight": "semibold",
          "width": 50,
        },
      ],
    },
  ],
}
`;

exports[`Shared HOCs Mappers - Segments if there are 15 segments, the last segment should display 10 rows in tooltip 1`] = `
Object {
  "header": Array [
    Object {
      "label": "Segment",
      "weight": "semibold",
    },
    Object {
      "label": "",
    },
    Object {
      "align": "right",
      "label": "%",
      "weight": "semibold",
    },
  ],
  "rows": Array [
    Object {
      "columns": Array [
        Object {
          "label": "Segment 12",
          "truncated": true,
          "weight": "semibold",
          "width": 160,
        },
        Object {
          "align": "right",
          "label": "523",
        },
        Object {
          "align": "right",
          "label": "14.5%",
          "weight": "semibold",
          "width": 50,
        },
      ],
    },
    Object {
      "columns": Array [
        Object {
          "label": "Segment 5",
          "truncated": true,
          "weight": "semibold",
          "width": 160,
        },
        Object {
          "align": "right",
          "label": "450",
        },
        Object {
          "align": "right",
          "label": "12.5%",
          "weight": "semibold",
          "width": 50,
        },
      ],
    },
    Object {
      "columns": Array [
        Object {
          "label": "Segment 14",
          "truncated": true,
          "weight": "semibold",
          "width": 160,
        },
        Object {
          "align": "right",
          "label": "345",
        },
        Object {
          "align": "right",
          "label": "9.6%",
          "weight": "semibold",
          "width": 50,
        },
      ],
    },
    Object {
      "columns": Array [
        Object {
          "label": "Segment 11",
          "truncated": true,
          "weight": "semibold",
          "width": 160,
        },
        Object {
          "align": "right",
          "label": "343",
        },
        Object {
          "align": "right",
          "label": "9.5%",
          "weight": "semibold",
          "width": 50,
        },
      ],
    },
    Object {
      "columns": Array [
        Object {
          "label": "Segment 8",
          "truncated": true,
          "weight": "semibold",
          "width": 160,
        },
        Object {
          "align": "right",
          "label": "330",
        },
        Object {
          "align": "right",
          "label": "9.2%",
          "weight": "semibold",
          "width": 50,
        },
      ],
    },
    Object {
      "columns": Array [
        Object {
          "label": "Segment 9",
          "truncated": true,
          "weight": "semibold",
          "width": 160,
        },
        Object {
          "align": "right",
          "label": "240",
        },
        Object {
          "align": "right",
          "label": "6.7%",
          "weight": "semibold",
          "width": 50,
        },
      ],
    },
    Object {
      "columns": Array [
        Object {
          "label": "Segment 4",
          "truncated": true,
          "weight": "semibold",
          "width": 160,
        },
        Object {
          "align": "right",
          "label": "150",
        },
        Object {
          "align": "right",
          "label": "4.2%",
          "weight": "semibold",
          "width": 50,
        },
      ],
    },
    Object {
      "columns": Array [
        Object {
          "label": "Segment 10",
          "truncated": true,
          "weight": "semibold",
          "width": 160,
        },
        Object {
          "align": "right",
          "label": "123",
        },
        Object {
          "align": "right",
          "label": "3.4%",
          "weight": "semibold",
          "width": 50,
        },
      ],
    },
    Object {
      "columns": Array [
        Object {
          "label": "Segment 13",
          "truncated": true,
          "weight": "semibold",
          "width": 160,
        },
        Object {
          "align": "right",
          "label": "5",
        },
        Object {
          "align": "right",
          "label": "0.1%",
          "weight": "semibold",
          "width": 50,
        },
      ],
    },
    Object {
      "columns": Array [
        Object {
          "label": "Other Segments",
          "truncated": true,
          "weight": "semibold",
          "width": 160,
        },
        Object {
          "align": "right",
          "label": "5",
        },
        Object {
          "align": "right",
          "label": "0.1%",
          "weight": "semibold",
          "width": 50,
        },
      ],
    },
  ],
}
`;

exports[`Shared HOCs Mappers - Segments should map segments information 1`] = `
Object {
  "disableScroll": true,
  "formatSpacement": false,
  "grid": Object {
    "maxValue": 97,
    "minValue": 0,
    "show": true,
    "type": "percentage",
  },
  "items": Array [
    Object {
      "columns": Array [
        Object {
          "icon": "ac-segment",
          "label": "Segment 6",
        },
      ],
      "progress": Array [
        Object {
          "color": "#A1E7CC",
          "value": 97,
        },
      ],
      "tooltip": Object {
        "header": Array [
          Object {
            "label": "Segment",
            "weight": "semibold",
          },
          Object {
            "label": "",
          },
          Object {
            "align": "right",
            "label": "%",
            "weight": "semibold",
          },
        ],
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "label": "Segment 6",
                "truncated": true,
                "weight": "semibold",
                "width": 160,
              },
              Object {
                "align": "right",
                "label": "3.5K",
              },
              Object {
                "align": "right",
                "label": "97.2%",
                "weight": "semibold",
                "width": 50,
              },
            ],
          },
        ],
      },
    },
    Object {
      "columns": Array [
        Object {
          "icon": "ac-segment",
          "label": "Segment 3",
        },
      ],
      "progress": Array [
        Object {
          "color": "#A1E7CC",
          "value": 55,
        },
      ],
      "tooltip": Object {
        "header": Array [
          Object {
            "label": "Segment",
            "weight": "semibold",
          },
          Object {
            "label": "",
          },
          Object {
            "align": "right",
            "label": "%",
            "weight": "semibold",
          },
        ],
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "label": "Segment 3",
                "truncated": true,
                "weight": "semibold",
                "width": 160,
              },
              Object {
                "align": "right",
                "label": "2K",
              },
              Object {
                "align": "right",
                "label": "55.6%",
                "weight": "semibold",
                "width": 50,
              },
            ],
          },
        ],
      },
    },
    Object {
      "columns": Array [
        Object {
          "icon": "ac-segment",
          "label": "Segment 2",
        },
      ],
      "progress": Array [
        Object {
          "color": "#A1E7CC",
          "value": 41,
        },
      ],
      "tooltip": Object {
        "header": Array [
          Object {
            "label": "Segment",
            "weight": "semibold",
          },
          Object {
            "label": "",
          },
          Object {
            "align": "right",
            "label": "%",
            "weight": "semibold",
          },
        ],
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "label": "Segment 2",
                "truncated": true,
                "weight": "semibold",
                "width": 160,
              },
              Object {
                "align": "right",
                "label": "1.5K",
              },
              Object {
                "align": "right",
                "label": "41.7%",
                "weight": "semibold",
                "width": 50,
              },
            ],
          },
        ],
      },
    },
    Object {
      "columns": Array [
        Object {
          "icon": "ac-segment",
          "label": "Segment 1",
        },
      ],
      "progress": Array [
        Object {
          "color": "#A1E7CC",
          "value": 27,
        },
      ],
      "tooltip": Object {
        "header": Array [
          Object {
            "label": "Segment",
            "weight": "semibold",
          },
          Object {
            "label": "",
          },
          Object {
            "align": "right",
            "label": "%",
            "weight": "semibold",
          },
        ],
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "label": "Segment 1",
                "truncated": true,
                "weight": "semibold",
                "width": 160,
              },
              Object {
                "align": "right",
                "label": "1K",
              },
              Object {
                "align": "right",
                "label": "27.8%",
                "weight": "semibold",
                "width": 50,
              },
            ],
          },
        ],
      },
    },
    Object {
      "columns": Array [
        Object {
          "icon": "ac-segment",
          "label": "Segment 5",
        },
      ],
      "progress": Array [
        Object {
          "color": "#A1E7CC",
          "value": 12,
        },
      ],
      "tooltip": Object {
        "header": Array [
          Object {
            "label": "Segment",
            "weight": "semibold",
          },
          Object {
            "label": "",
          },
          Object {
            "align": "right",
            "label": "%",
            "weight": "semibold",
          },
        ],
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "label": "Segment 5",
                "truncated": true,
                "weight": "semibold",
                "width": 160,
              },
              Object {
                "align": "right",
                "label": "450",
              },
              Object {
                "align": "right",
                "label": "12.5%",
                "weight": "semibold",
                "width": 50,
              },
            ],
          },
        ],
      },
    },
    Object {
      "columns": Array [
        Object {
          "icon": "ac-segment",
          "label": "Segment 4",
        },
      ],
      "progress": Array [
        Object {
          "color": "#A1E7CC",
          "value": 4,
        },
      ],
      "tooltip": Object {
        "header": Array [
          Object {
            "label": "Segment",
            "weight": "semibold",
          },
          Object {
            "label": "",
          },
          Object {
            "align": "right",
            "label": "%",
            "weight": "semibold",
          },
        ],
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "label": "Segment 4",
                "truncated": true,
                "weight": "semibold",
                "width": 160,
              },
              Object {
                "align": "right",
                "label": "150",
              },
              Object {
                "align": "right",
                "label": "4.2%",
                "weight": "semibold",
                "width": 50,
              },
            ],
          },
        ],
      },
    },
  ],
}
`;

exports[`Shared HOCs Mappers - knownIndividuals should map knownIndividuals information 1`] = `
Object {
  "data": Array [
    Object {
      "color": "#A1E7CC",
      "count": 3500,
      "label": "Segmented",
    },
    Object {
      "color": "#26966B",
      "count": 100,
      "label": "Unsegmented",
    },
  ],
  "empty": Object {
    "message": "0 segmented visitors interacted with this content.",
    "show": false,
  },
  "total": 3600,
}
`;

exports[`Shared HOCs Mappers - knownIndividuals should return martellL4 & martellD4 for segmented & unsegmented respectively 1`] = `
Array [
  Object {
    "color": "#A1E7CC",
    "count": 3500,
    "label": "Segmented",
  },
  Object {
    "color": "#26966B",
    "count": 100,
    "label": "Unsegmented",
  },
]
`;

exports[`Shared HOCs Mappers - uniqueVisitors should map uniqueVisitors information 1`] = `
Object {
  "data": Array [
    Object {
      "color": "#FFB46E",
      "count": 2000,
      "label": "Anonymous Individuals",
    },
    Object {
      "color": "#4B9BFF",
      "count": 3450,
      "label": "Known Individuals",
    },
  ],
  "empty": Object {
    "message": "0 visitors interacted with this content.",
    "show": false,
  },
  "total": 5450,
}
`;

exports[`Shared HOCs Mappers - uniqueVisitors should return mormont & stark for anonymousIndividuals & knownIndiviudals respectively 1`] = `
Array [
  Object {
    "color": "#FFB46E",
    "count": 2000,
    "label": "Anonymous Individuals",
  },
  Object {
    "color": "#4B9BFF",
    "count": 3450,
    "label": "Known Individuals",
  },
]
`;
